[tool.poetry]
name = "knot-cloud-websocket"
version = "0.1.0"
description = "Client side library that provides a WebSocket abstraction to KNoT Cloud"
authors = ["KNoT <knot@cesar.org.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
sphinx = "^2.0"
sphinx_rtd_theme = "^0.4.3"
pylint = "^2.3"
yapf = "^0.27.0"
pytest-asyncio = "^0.10.0"
pytest-mock = "^1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
